Ajuste del estilo css y actualización de los enlaces HTML

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <header>
         <h1>INICIO</h1>
     </header>
-     <a href="informacon.html">INFORMACIÓN</a>
+     <a href="informacion.html">INFORMACIÓN</a>
      <a href="galeria.html">GALERÍA</a>
      <a href="index.html">INICIO</a>
+     <link rel="stylesheet" href="style.css">
     
 </body>
 </html>
