--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <header>
         <h1>INICIO</h1>
     </header>
+    <h1>¡Bienvenido!</h1>
+    <h2>¿Listo para aprender de Ciberseguridad?</h2>
+    <p>Es importante conocer sobre Ciberseguridad porque con ella puedes proteger tu información digital, dispositivos y activos.</p>
+    <h3>Presiona en cuqluiera de las opciones para aprender más.</h3>
      <a href="informacion.html">INFORMACIÓN</a>
      <a href="galeria.html">GALERÍA</a>
-     <a href="index.html">INICIO</a>
      <link rel="stylesheet" href="style.css">
     
 </body>
