--- a/informacion.html
+++ b/informacion.html
@@ -9,7 +9,12 @@
     <header>
         <h1>INFORMACIÓN</h1>
     </header>
-     <a href="informacion.html">INFORMACIÓN</a>
+    <div class="contenedor">Conceptos Clave
+    <div class="elemento">Antivirus: Programa que detecta cualquiera amenaza y la elimina del dispositivo.</div>
+    <div class="elemento">Software: Programa informático que sirve para realizar tareas específicas.</div>
+    <div class="elemento">Cookies:Archivos pequeños que contienen infromación que ha recopilada una página web que se ha utilizado y se almacenan en los dispositivos.</div>
+    <div class="elemento">Wi-Fi: Conexión inalámbrica para conectar dispositivos a internet.</div>
+    </div>
      <a href="galeria.html">GALERÍA</a>
      <a href="index.html">INICIO</a>
      <link rel="stylesheet" href="style.css">
