Implementación de imagen en la página principal.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 
 </head>
 
-<body>
+<body>  
 
+    <!--Menú de navegación utilizando Flexbox-->
     <nav class="nav">
         <a href="index.html">INICIO</a>
         <a href="informacion.html">INFORMACIÓN</a>
         <a href="galeria.html">GALERÍA</a>
     </nav>
 
+    <!--Sección de bienvenida utilizando Flexbox para centrar verticalmente-->
     <header class="bienvenida">
         <h1>Bienvenidos a nuestro sitio de Ciberseguridad</h1>
         <p style="font-size: 20px;">Descubre cómo protegerte en el mundo digital.</p>
@@ -29,6 +31,7 @@
 
     <h2>Descrubre lo que podrás observar en esta página</h2>
 
+    <!--Sección principal utilizando grid para organizar la información en cajas-->
     <section class="contenido">
         <div class="caja">
             <h2>Conceptos clave</h2>
@@ -44,8 +47,10 @@
             <h2>Consejos prácticos</h2>
             <p>Explora acciones sencillas para mantener tu información personal segura en línea.</p>
         </div>
+
     </section>
      
+    <img src="ciberseguridad-empresas.jpg" alt="Ciberseguridad" style="width: 100%; max-width: 600px; margin: 0 auto; display: block; border-radius: 10px;">
         
 </body>
 </html>
