Implementación de archivo de estilo en toda las páginas.

--- a/galeria.html
+++ b/galeria.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"> <!---Se utiliza para poder habilitar los caracteres especiales de una página web.--->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Para que se ajuste a todos los dispositivos y poder verlo correctamente--->
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav class="nav">
@@ -11,7 +12,7 @@
         <a href="informacion.html">INFORMACIÓN</a>
         <a href="galeria.html">GALERÍA</a>
     </nav>
-    
+
     <header>
         <h1>GALERÍA</h1>
     </header>
