--- a/informacion.html
+++ b/informacion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"> <!---Se utiliza para poder habilitar los caracteres especiales de una página web.--->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Para que se ajuste a todos los dispositivos y poder verlo correctamente--->
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -12,7 +13,7 @@
         <a href="informacion.html">INFORMACIÓN</a>
         <a href="galeria.html">GALERÍA</a>
     </nav>
-    
+
     <header>
         <h1>INFORMACIÓN</h1>
     </header>
