se agregaron las imágenes de la galería aún falta acomodarlos

--- a/galeria.html
+++ b/galeria.html
@@ -14,9 +14,16 @@
     </nav>
 
     <header>
-        <h1>GALERÍA</h1>
+        <h1 class="titulo">GALERÍA</h1>
+
     </header>
-     
-    
+
+    <div class="cajita">
+        <img class = "imagen1" src="que es ciberseguridad.webp">
+        <img class= "imagen1" src="empresarial.jpg">
+        <img class= "imagen1" src="imagen2.webp">
+    </div>
+
+
 </body>
 </html>
