se agregaron imágenes y se modificaron tamaños

--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
     </nav>
 
     <header>
-        <h1 class="titulo">GALERÍA</h1>
+        <h1 class="titulogal">GALERÍA</h1>
 
     </header>
 
@@ -24,6 +24,11 @@
         <img class= "imagen1" src="imagen2.webp">
     </div>
 
-
+    <h1 class="titulogal">CUIDADO CON </h1>
+        
+    <div class="cajita2">
+        <img class="imagen2p" src="malware.webp">
+        <img class="imagen2p" src="phishing.webp">
+    </div>
 </body>
 </html>
