--- a/galeria.html
+++ b/galeria.html
@@ -24,7 +24,7 @@
         <img class= "imagen1" src="imagen2.webp">
     </div>
 
-    <h1 class="titulogal">CUIDADO CON </h1>
+    <h1 class="titulogal">¡CUIDADO CON! </h1>
         
     <div class="cajita2">
         <img class="imagen2p" src="malware.webp">
