Agregar imagen de ciberseguridad en parte de información

--- a/informacion.html
+++ b/informacion.html
@@ -84,6 +84,6 @@
             </div>
         </div>
     </div>
-
+    <img src="imagen-ciberseguridadpng.png" alt="Imagen sobre Ciberseguridad" style="width: 100%; max-width: 500px; margin: 0 auto; display: block; border-radius: 5px;">
 </body>
 </html>
