organización de archivos en carpetas

--- a/galeria.html
+++ b/galeria.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!---Se utiliza para poder habilitar los caracteres especiales de una página web.--->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Para que se ajuste a todos los dispositivos y poder verlo correctamente--->
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="nav">
@@ -19,9 +19,9 @@
     </header>
 
     <div class="cajita">
-        <img class = "imagen1" src="que es ciberseguridad.webp">
-        <img class= "imagen1" src="empresarial.jpg">
-        <img class= "imagen1" src="imagen2.webp">
+        <img class = "imagen1" src="img/que es ciberseguridad.webp">
+        <img class= "imagen1" src="img/empresarial.jpg">
+        <img class= "imagen1" src="img/imagen2.webp">
     </div>
 
     <h1 class="titulogal">¡CUIDADO CON! </h1>
