--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!--Se utiliza para poder habilitar los caracteres especiales de una página web.-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--Para que se ajuste a todos los dispositivos y poder verlo correctamente -->
     <title>Inicio - Ciberseguridad</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <style>
         body{
@@ -50,7 +50,7 @@
 
     </section>
      
-    <img src="ciberseguridad-empresas.jpg" alt="Ciberseguridad" style="width: 100%; max-width: 600px; margin: 0 auto; display: block; border-radius: 10px;">
+    <img src="img/ciberseguridad-empresas.jpg" alt="Ciberseguridad" style="width: 100%; max-width: 600px; margin: 0 auto; display: block; border-radius: 10px;">
         
 </body>
 </html>
