--- a/informacion.html
+++ b/informacion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="css/style.css">  
 </head>
 
 <body>
@@ -84,6 +84,6 @@
             </div>
         </div>
     </div>
-    <img src="imagen-ciberseguridadpng.png" alt="Imagen sobre Ciberseguridad" style="width: 100%; max-width: 500px; margin: 0 auto; display: block; border-radius: 5px;">
+    <img src="img/imagen-ciberseguridadpng.png" alt="Imagen sobre Ciberseguridad" style="width: 100%; max-width: 500px; margin: 0 auto; display: block; border-radius: 5px;">
 </body>
 </html>
