implementación de imágenes en carpeta.

--- a/galeria.html
+++ b/galeria.html
@@ -27,8 +27,8 @@
     <h1 class="titulogal">¡CUIDADO CON! </h1>
         
     <div class="cajita2">
-        <img class="imagen2p" src="malware.webp">
-        <img class="imagen2p" src="phishing.webp">
+        <img class="imagen2p" src="img/malware.webp">
+        <img class="imagen2p" src="img/phishing.webp">
     </div>
 </body>
 </html>
